workloads/default/web/templates/web.vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: web
  namespace: default

spec:
  gateways: ["primary.istio-system"]
  hosts: ["web-origin.stevenxie.me"]
  http:
    - route:
        - destination:
            host: web
          headers:
            response:
              set:
                X-Service: web-origin
